--- a/src/pages/projects/style.css
+++ b/src/pages/projects/style.css
@@ -16,26 +16,37 @@
 
 .project__card {
   display: grid;
-  grid-template-rows: 50px 100px 100px 50px 50px;
-  max-height: 400px;
+  gap: 32px;
 }
 
-.project__title,
+.project__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.project__owner {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-family: "Ubuntu Mono", "Courier New", Courier, monospace;
+  gap: 8px;
+}
+
+.project__owner img {
+  border-radius: 20px;
+  object-position: center;
+  object-fit: cover;
+}
+
 .project__desc {
-  margin-bottom: 10px;
-}
-
-.project__title {
-  grid-row: 1/2;
-}
-
-.project__desc {
-  grid-row: 2/3;
+  line-height: 1.5;
 }
 
 .project__tecs {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(10%, 1fr));
+  width: 100%;
 }
 
 .project__tecs img {
@@ -43,18 +54,11 @@
   height: 42px;
 }
 
-.project__owner {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
 .project__btns {
-  grid-row: 4/5;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  
 }
 
 .project__url,
@@ -63,13 +67,18 @@
   background-color: #35bd13;
   color: #000000;
   display: flex;
-  height: 32px;
+  height: 48px;
+  border-radius: 8px;
   justify-content: center;
+  font-size: 14px;
+  width: 140px;
   margin-right: 2%;
   text-align: center;
   text-decoration: none;
-  text-transform: uppercase;
-  width: 48%;
+  padding: 8px;
+  width: auto;
+  cursor: pointer;
+  border: none;
 }
 
 .div {
@@ -93,7 +102,10 @@
     grid-template-columns: 1fr;
   }
 
-  .project__card {
-    grid-template-rows: 30px minmax(50px, 70px) 1fr 100px;
+  .project__tecs {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(10%, 1fr));
+    width: 100%;
   }
 }
